# fcitx5-voice-input

./: .gitignore  AGENTS.md  CMakeLists.txt  GEMINI.md  LICENSE  Makefile  README.md
.github/workflows/: aur-publish.yml  test.yml
aur/: .SRCINFO  PKGBUILD
conf/: default.yaml
data/: org.example.fcitx5.voiceinput.gschema.xml
docs/: README.md
docs/superpowers/plans/: 2026-05-30-github-actions-test.md
docs/superpowers/specs/: 2026-05-30-github-actions-test-design.md
src/: CMakeLists.txt  audio_capture.cpp  audio_capture.h  speech_recognizer.cpp  speech_recognizer.h  voiceinput-addon.conf.in  voiceinput-module.cpp  voiceinput-module.h  voiceinput.conf  voiceinput.conf.in  voiceinput_config.h  wav_header.h
tests/: CMakeLists.txt  speech_recognizer_test.cpp  voiceinput_config_test.cpp  wav_header_test.cpp
